--- a/packages/web/src/modules/Chat/Expression.less
+++ b/packages/web/src/modules/Chat/Expression.less
@@ -54,7 +54,7 @@
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: flex-start;
     align-content: flex-start;
     gap: 10px;
     padding: 16px 18px 18px;
