--- a/packages/web/src/modules/Sidebar/Admin.less
+++ b/packages/web/src/modules/Sidebar/Admin.less
@@ -28,7 +28,6 @@
         width: 94vw !important;
 
         :global(.rc-dialog-body) {
-            max-height: calc(100vh - 96px);
             padding-right: 0;
         }
     }
@@ -74,6 +73,12 @@
     }
 
     .button {
+        width: 100%;
+    }
+
+    .groupAIButton,
+    .groupAIButtonOff,
+    .unsealButton {
         width: 100%;
     }
 
