--- a/packages/web/src/modules/Sidebar/SelfInfo.less
+++ b/packages/web/src/modules/Sidebar/SelfInfo.less
@@ -12,7 +12,6 @@
         width: 94vw !important;
 
         :global(.rc-dialog-body) {
-            max-height: calc(100vh - 96px);
             padding-bottom: 18px;
         }
     }
